# Meson_Training

./: Readme.md  check_all.xsh  clean.xsh
01-HelloWorld/: Readme.md  check.xsh  main.c  meson.build
02-Dependencies/: check.xsh  meson.build
02-Library/: Readme.md  check.xsh  meson.build  mylib.c
03-Dependencies/: Readme.md  check.xsh  meson.build  simple.c
03-Wrap/: check.xsh  cpr-example.cpp  meson.build
03-Wrap/subprojects/: cpr.wrap
04-Tests/: meson.build
04-Tests/simplelib/: meson.build  simplelib.h
04-Wrap/: Readme.md  check.xsh  meson.build
05-Tests/: Readme.md  check.xsh  meson.build
05-Tests/gtest-test/: test.cpp
05-Tests/manual-test/: main.c
05-Tests/python-test/: test.py
05-Tests/simplelib/: meson.build  simplelib.c  simplelib.h
06-Coverage/: Readme.md
07-Generators/: Readme.md  check.xsh  generator.py  main.c.in  meson.build
08-Configuration-files/: Readme.md  check.xsh  main.c  meson.build
09-Cross-Compilation/: Readme.md  check.xsh  cross.txt  meson.build
